# aether-job-career-agent

./: .abacus.donotdelete  .env.example  .eslintrc.cjs  .gitignore  AGENT_EXECUTION_PROMPT.md  EXECUTION-REPORT.md  README.md  gap-analysis.json  gap_analysis_report.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start-api.sh  start-web.sh  start-worker.sh  turbo.json
apps/api/: logging_config.json  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements.txt
apps/api/app/: __init__.py  config.py  db.py  deps.py  health.py  main.py  rate_limit.py  security.py
apps/api/migrations/: 0020_per_user_agent_creds.sql  0021_multi_gmail_inbox.sql  0022_billing.sql  0023_admin.sql  0024_email_thread_ai_score.sql  0024_offers.sql  0025_offers.sql
apps/api/scripts/: purge_demo_jobs.py  seed_demo.py
apps/api/tests/: conftest.py  test_agents_screen.py  test_analytics.py  test_applications_move.py  test_applications_tracker.py  test_approval_modal.py  test_approvals.py  test_approvals_delete.py  test_ats_engine.py  test_auth.py  test_career_data.py  test_cover006_camelcase.py  test_cover_letter_agent.py  test_cover_letter_studio.py  test_email_agent.py  test_email_send_gate.py  test_emails.py  test_fit_scorer_agent.py  test_gap6_sourcing_volume.py  test_gap_d1_dual_auth.py  test_gap_d2_multi_inbox.py  test_gap_d3_agent_config.py  test_gap_e1_llm_mode.py  test_gap_e2_conversion.py  test_gap_model_choice.py  test_gap_new003_injection.py  test_gap_p5_auth_compliance.py  test_gap_p5_cover.py  test_gap_p5_cover_voice.py  test_gap_p5_pdf_bullets.py  (+75 more)
(+1530 files in other folders)
