[project]
name = "aether-api"
version = "0.0.0"
description = "Aether API — FastAPI + LangGraph agent backend"
requires-python = ">=3.11"
dependencies = [
  "pdfplumber>=0.11",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
